# fastapi_timezone

./: README.md  justfile  pyproject.toml  tui.py
fastapi_timezone/: dependencies.py  main.py  models.py
templates/: event.html  index.html
