[project]
name = "fastapi-timezone"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.31.1",
]

[tool.setuptools.packages.find]
include = ["fastapi_timezone"]
exclude = ["templates", "node_modules"]
